# simple_workspace_contextualizer

./: README.md  pyproject.toml
src/simple_workspace_contextualizer/: cli.py
